# minicel-rs

./: Cargo.toml  README.md  justfile
src/: ast.rs  builtins.rs  engine.rs  errors.rs  main.rs  parser.rs  tokenizer.rs  utils.rs
